--- a/login.html
+++ b/login.html
@@ -37,13 +37,13 @@
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
         <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">About Us</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Services</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Níveis</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Pricing</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="cadastro.html">Cadastro</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Contact</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Login</a></li>
     </ul>
     <a class=" lg:inline-block py-2 px-6 bg-indigo-700 hover:bg-indigo-900 text-sm text-white font-bold rounded-xl transition duration-200" href="teste.html">Faça o teste</a>
 </nav>
@@ -99,12 +99,12 @@
 
 <!--LOGIN-->
 <!-- component -->
-<div class="bg-white dark:bg-gray-900">
+<div class="bg-white">
     <div class="flex justify-center h-screen">
         <div class="hidden bg-cover lg:block lg:w-2/3" style="background-image: url(https://images.unsplash.com/photo-1616763355603-9755a640a287?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)">
             <div class="flex items-center h-full px-20 bg-gray-900 bg-opacity-40">
                 <div>
-                    <h2 class="text-4xl font-bold text-white">Brand</h2>
+                    <h2 class="text-4xl font-bold text-white">Tokilingo</h2>
                     
                     <p class="max-w-xl mt-3 text-gray-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. In autem ipsa, nulla laboriosam dolores, repellendus perferendis libero suscipit nam temporibus molestiae</p>
                 </div>
@@ -114,37 +114,39 @@
         <div class="flex items-center w-full max-w-md px-6 mx-auto lg:w-2/6">
             <div class="flex-1">
                 <div class="text-center">
-                    <h2 class="text-4xl font-bold text-center text-gray-700 dark:text-white">Brand</h2>
+                    <div class="flex justify-center mr-auto text-3xl font-bold leading-none">
+                        <img src="imagens/logotokiazul.png" alt="logo"  class="h-28">
+                    </div>
                     
-                    <p class="mt-3 text-gray-500 dark:text-gray-300">Sign in to access your account</p>
+                    <p class="mt-0 text-gray-500">Faça Login para entrar em sua conta</p>
                 </div>
 
                 <div class="mt-8">
                     <form>
                         <div>
-                            <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Email Address</label>
-                            <input type="email" name="email" id="email" placeholder="example@example.com" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                            <label for="email" class="block mb-2 text-sm text-gray-600 ">E-mail</label>
+                            <input type="email" name="email" id="email" placeholder="examplo@examplo.com" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                         </div>
 
                         <div class="mt-6">
                             <div class="flex justify-between mb-2">
-                                <label for="password" class="text-sm text-gray-600 dark:text-gray-200">Password</label>
-                                <a href="#" class="text-sm text-gray-400 focus:text-blue-500 hover:text-blue-500 hover:underline">Forgot password?</a>
+                                <label for="password" class="text-sm text-gray-600">Senha</label>
+                                <a href="#" class="text-sm text-gray-400 focus:text-blue-500 hover:text-blue-500 hover:underline">Esqueceu a senha?</a>
                             </div>
 
-                            <input type="password" name="password" id="password" placeholder="Your Password" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                            <input type="password" name="password" id="password" placeholder="senha" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                         </div>
 
                         <div class="mt-6">
                             <button
-                                class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50">
-                                Sign in
+                                class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-200 transform bg-indigo-700 rounded-md hover:bg-indigo-600 focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50">
+                                Faça Login
                             </button>
                         </div>
 
                     </form>
 
-                    <p class="mt-6 text-sm text-center text-gray-400">Don&#x27;t have an account yet? <a href="#" class="text-blue-500 focus:outline-none focus:underline hover:underline">Sign up</a>.</p>
+                    <p class="mt-6 text-sm text-center text-gray-400"> Ainda não tem uma conta? <a href="cadastro.html" class="text-blue-500 focus:outline-none focus:underline hover:underline">Cadastre-se</a>.</p>
                 </div>
             </div>
         </div>
