--- a/embreve.html
+++ b/embreve.html
@@ -107,7 +107,7 @@
 <section class="h-screen bg-cover">
     <div class="flex h-full w-full items-center justify-center container mx-auto px-8">
       <div class="max-w-2xl text-center">
-        <h1 class="text-3xl sm:text-5xl text-bold text-indigo-700 lg:text-7xl">EM BREVE VIRAO COISAS NOVAS!</h1>
+        <h1 class="text-3xl sm:text-5xl text-bold text-indigo-700 lg:text-7xl">EM BREVE VIRÃO COISAS NOVAS!</h1>
   
         <p class="mt-6 lg:text-lg text-black">Digite seu e-mail e te avisaremos quando estiver pronto!</p>
   
