--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Niveis</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Níveis</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="contato.html">Contato</a></li>
 
@@ -80,7 +80,7 @@
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="alfabeto.html">Alfabeto</a>
                 </li>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="basico.html">Niveis</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="basico.html">Níveis</a>
                 </li>
                 <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="contato.html">Contato</a>
@@ -147,7 +147,7 @@
           <div class="flex flex-col w-full mb-12">
             <div class="w-full mx-auto lg:w-full">
               <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">A formula ideal para voce aprender uma nova lingua!</h1>
-              <p class="mx-auto lg:text-xl leading-relaxed text-gray-800 text-center mb-8">Desenvolvemos o melhor caminho para construir seu conhecimento. Do básico ao avançado, siga o plano e garanta um aprendizado completo. 
+              <p class="mx-auto lg:text-xl leading-relaxed text-gray-800 text-center mb-8">Desenvolvemos o melhor caminho para construir seu conhecimento. Do básico ao avançado, siga o plano e garanta um aprendizado completo. Cada nível está dividido em 6 módulos.
                 </p>
               <img class="mx-auto rounded-lg rounded-2xl shadow-xl" src="imagens/caminho.png" />
             </div>
